YAML.Yaml/VPC.yml
Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: "MyVPC"
      Region: "us-west-2"

  
  mySubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: "us-west-1a"
      Tags:
        - Key: Name
          Value: Publicsubnet
  
  myInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: igw
  
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: myVPC
      InternetGatewayId:
        Ref: myInternetGateway
  
  myRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: myVPC
      Tags:
        - Key: Name
          Value: rt
  myRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: myRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: myInternetGateway

  mySubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: mySubnet
      RouteTableId:
        Ref: myRouteTable

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: My Security Group
      VpcId:
        Ref: myVPC 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  MyInstance:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: "ami-01b32aa8589df6208" 
      InstanceType: "t2.micro"
      KeyName: "kkks"
      SecurityGroupIds: 
        - Ref: "MySecurityGroup"
      SubnetId: 
        Ref: "mySubnet"

  MyVolume:
    Type: "AWS::EC2::Volume"
    Properties:
      AvailabilityZone: "ap-northeast-1a"
      Size: "10"
      Tags:
        - Key: "Name"
          Value: "my-volumeforinstance"
  
  MyVolumeAttachment:
    Type: "AWS::EC2::VolumeAttachment"
    Properties:
      InstanceId:
        Ref: MyInstance
      VolumeId: 
        Ref: MyVolume
      Device: "/dev/sdf"
